--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,8 +1,8 @@
 .container {
     margin: 0 auto;
-    max-width: 750px;
-    padding: 0 1rem;
-
+    width: 100%;
+    padding: 0;
+    max-width: 1980px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
