--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,11 +1,15 @@
 .navigation {
-    padding: 1rem 0 3rem;
-    background-color: #000;
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: space-between;
-    // align-items: center;
-    // border-bottom: 1px solid #f5f5f5;
+    padding: 8px 32px;
+    background-color: rgba(0,0,0,.6);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .title {
@@ -14,10 +18,31 @@
     text-decoration: none;
 }
 
+.logo {
+    padding: 8px 16px;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    img {
+        width: 100%;
+        height: auto;
+        max-width: 300px;
+        margin: 0;
+    }
+}
+
+.nav-container {
+    width: 80%;
+    padding: 8px 16px;
+}
+
 .nav-list{
     display: flex;
     list-style-type: none;
     margin: 0;
+    li {
+        margin-bottom: 0;
+    }
 }
 
 .nav-item {
@@ -35,4 +60,10 @@
 .active-item{
     color: #eee;
     text-decoration: underline;
+}
+
+.social-icon{
+    height: 16px;
+    width: auto;
+    margin: 0 16px;
 }
