--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,6 +1,6 @@
 .navigation {
     padding: 8px 32px;
-    background-color: rgba(0,0,0,.6);
+    background-color: #000419;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,16 +30,25 @@
         margin: 0;
     }
 }
-
-.nav-container {
+.navgiation-bar-wrapper {
+    display: flex;
+    flex-direction: column;
     width: 80%;
+}
+
+.main-nav-container {
+    margin: 14px 0 8px;
     padding: 8px 16px;
+    padding-right: 0;
+    width: 100%;
+
 }
 
 .nav-list{
     display: flex;
     list-style-type: none;
     margin: 0;
+    justify-content: flex-end;
     li {
         margin-bottom: 0;
     }
@@ -47,9 +56,14 @@
 
 .nav-item {
     color: #fff;
-    font-size: .9rem;
+    font-size: 17px;
+    letter-spacing: 1.9px;
+    line-height: 1.1;
+    font-family: 'Roboto Slab', serif;
+    font-weight: bold;
     font-weight: 600;
-    margin-right: 1.3rem;
+    margin-left: 48px;
+    margin-right: 12px;
     text-decoration: none;
 }
 
@@ -62,8 +76,20 @@
     text-decoration: underline;
 }
 
+.topbarHeader {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    justify-content: flex-end;
+    padding-top: 6px;
+}
+
+.social-icon-wrapper{
+    margin-left: 8px;
+}
 .social-icon{
     height: 16px;
     width: auto;
-    margin: 0 16px;
+    margin: 0px;
+    padding: 0 12px;
 }
