--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -23,17 +23,49 @@
     width: 20%;
     display: flex;
     align-items: center;
+
     img {
         width: 100%;
         height: auto;
         max-width: 300px;
         margin: 0;
     }
+
+    @media screen and (max-width: 1440px) {
+        width: 25%;
+        padding: 8px;
+    }
 }
+
 .navgiation-bar-wrapper {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 75%;
+    position: relative;
+
+    @media screen and (max-width: 1023px) {
+        
+    }
+}
+
+.menu-close {
+    display: none;
+    @media screen and (max-width: 1023px) {
+        display: block;
+        width: 44px;
+        height: 32px;
+        position: absolute;
+        top: 22px;
+        right: 12px;
+    }
+}
+
+.menu-open {
+    display: none;
+    @media screen and (max-width: 1023px) {
+        display: block;
+        background: black;
+    }
 }
 
 .main-nav-container {
@@ -42,13 +74,17 @@
     padding-right: 0;
     width: 100%;
 
+    @media screen and (max-width: 1023px) {
+       
+    }
 }
 
-.nav-list{
+.nav-list {
     display: flex;
     list-style-type: none;
     margin: 0;
     justify-content: flex-end;
+
     li {
         margin-bottom: 0;
     }
@@ -65,14 +101,27 @@
     margin-right: 12px;
     text-decoration: none;
     position: relative;
+
+    @media screen and (max-width: 1440px) {
+        font-size: 16px;
+        letter-spacing: 1.5px;
+        margin-left: 32px;
+    }
+
+    @media screen and (max-width: 1140px) {
+        font-size: 15px;
+        letter-spacing: 1.2px;
+        margin-left: 28px;
+    }
 }
 
 .nav-item:hover {
     color: #e5e5e5;
 }
 
-.active-item{
+.active-item {
     text-decoration: none;
+
     &::after {
         content: '';
         position: absolute;
@@ -83,10 +132,10 @@
         height: 2px;
         background: #CEBD88;
     }
-    
+
 }
 
-.topbarHeader {
+.topbar-header {
     display: flex;
     list-style-type: none;
     margin: 0;
@@ -94,20 +143,87 @@
     padding-top: 6px;
 }
 
-.social-icon-wrapper{
+.social-icon-wrapper {
     margin-left: 8px;
+    display: flex;
 }
-.social-icon{
+
+.social-icon {
     height: 16px;
     width: auto;
     margin: 0px;
     padding: 0 12px;
 }
 
-.data-weather{
-    font-size: 12;
+.data-weather-wrapper {
+    margin-right: 40px;
+    display: flex;
+}
+
+.data-weather {
+    font-size: 13px;
     font-family: 'Roboto Slab', serif;
     font-weight: 400;
     color: white;
     padding: 0 4px;
+    margin: 0 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    sup {
+        font-size: 0.7em;
+    }
+}
+
+.icon-data {
+    height: 16px;
+    margin-right: 6px;
+
+    img {
+        height: 100%;
+        width: auto;
+    }
+}
+
+.hamburger-line {
+    display: none;
+
+    @media screen and (max-width: 1023px) {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin-bottom: 5px;
+        position: relative;
+        background: #cdcdcd;
+        border-radius: 3px;
+        z-index: 1;
+        transform-origin: 4px 0px;
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
+
+        &:first-child
+        {
+          transform-origin: 0% 0%;
+        }
+        &:nth-last-child(2)
+        {
+          transform-origin: 0% 100%;
+        }
+        // &:checked ~ span.hamburger-line{
+        //     opacity: 1;
+        //     transform: rotate(45deg) translate(-2px, -1px);
+        //     background: #232323;
+        //   }
+        //   &:checked ~ span.hamburger-line:nth-last-child(3){
+        //     opacity: 0;
+        //     transform: rotate(0deg) scale(0.2, 0.2);
+        //   }
+        //   &:checked ~ span.hamburger-line:nth-last-child(2){
+        //     transform: rotate(-45deg) translate(0, -1px);
+        //   }
+  
+        //   &:checked ~ .main-nav-container{
+        //       transform: none;
+        //   }
+    }
 }
