--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 // Google Font
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&&display=swap');
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
@@ -16,6 +16,7 @@
  html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  font-family: 'Raleway', sans-serif;
 }
 
 /* Sections
