--- a/src/components/btn.module.scss
+++ b/src/components/btn.module.scss
@@ -1,16 +1,42 @@
-.btn-primary{
-    background: black;
-    color: white;
-    width: 180px;
-    font-weight: bold;
-    text-transform: capitalize;
-    font-size: 18px;
+.btn {
+    padding: 16px 32px;
+    border: none;
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+    position: relative;
+    z-index: 0;
+    &:before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: calc(100% + 4px);
+        height: calc(100% + 4px);
+        background: transparent;
+        border: 1px solid #CEBD88;
+        transform: translate(-50%, -50%);
+        z-index: -1;
+    }
+    a {
+        text-decoration: none;
+        font-weight: bold;
+        text-align: center;
+    }
 }
-.btn-secondary{
+
+.primary{
+    background-color: #CEBD88;
+    padding: 16px 48px;
+    a {
+        color: #fff;
+        font-size: 18px;
+        letter-spacing: 2px;
+    }
+}
+.secondary{
     background: white;
-    color: black;
-    width: 180px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 12px;
+    a {
+        color: #CEBD88;
+        font-size: 14px;
+    }
 }
