--- a/src/components/btn.module.scss
+++ b/src/components/btn.module.scss
@@ -1,10 +1,11 @@
 .btn {
-    padding: 16px 32px;
+    padding: 0;
     border: none;
     text-align: center;
     font-family: 'Roboto Slab', serif;
     position: relative;
     z-index: 0;
+    display: flex;
     &:before {
         content: '';
         position: absolute;
@@ -18,6 +19,7 @@
         z-index: -1;
     }
     a {
+        padding: 12px 32px;
         text-decoration: none;
         font-weight: bold;
         text-align: center;
@@ -25,18 +27,20 @@
 }
 
 .primary{
-    background-color: #CEBD88;
-    padding: 16px 48px;
     a {
+        background-color: #CEBD88;
+        padding: 16px 48px;
         color: #fff;
         font-size: 18px;
+        line-height: 20px;
         letter-spacing: 2px;
     }
 }
 .secondary{
-    background: white;
     a {
+        background: white;
         color: #CEBD88;
         font-size: 14px;
+        line-height: 16px;
     }
 }
