--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -12,4 +12,10 @@
         background-color: white;
         z-index: 0;
     }
+            @media screen and (max-width: 1023px) {
+                &:after{
+                    content: none;
+                }
+                padding-bottom: 96px;
+            }
 }
