--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -375,3 +375,15 @@ template {
   background: url(../assets/arrowSlider.svg) center/contain no-repeat;
   z-index: 2;
 }
+@media screen and (max-width: 1023px) {
+  .swiper-button-next {
+    transform: translate(-50%, -50%) rotate(180deg);
+    bottom: -92px;
+    right: -12px;
+  }
+  .swiper-button-prev {
+    transform: translate(-50%, -50%);
+    bottom: -92px;
+    right: 40px;
+  }
+}
