--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
 
-    img {
+    .logoImg {
         width: 100%;
         height: auto;
         max-width: 300px;
