--- a/src/components/moreInfo.module.scss
+++ b/src/components/moreInfo.module.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     background: center/cover no-repeat;
+    text-align: center;
 }
 
 .more-info-tagline{
