--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -13,12 +13,15 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    @media screen and (max-width: 1023px){
-        flex-direction: column;
-    }
     > * {
         flex-grow: 1;
         flex-basis: (100%/3);
+    }
+    @media screen and (max-width: 1023px){
+        flex-direction: column;
+        > * {
+            padding: 12px 8px;
+        }
     }
 }
 
