--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -186,7 +186,9 @@
     margin: 0;
     justify-content: flex-end;
     padding-top: 6px;
-    display: none;
+    @media screen and (max-width: 1023px) {       
+        display: none;
+    }
 }
 
 .menu {
