--- a/src/components/heroSlider.module.scss
+++ b/src/components/heroSlider.module.scss
@@ -1,6 +1,7 @@
 .gold-border-wrapper{
     width: 90%;
     position: relative;
+    margin-bottom: 12px;
     &:before{
         content: '';
         position: absolute;
